ヘッダー、フッター、TOP修正

--- a/app/_template/partial/footer.njk
+++ b/app/_template/partial/footer.njk
@@ -43,19 +43,19 @@
               <a href="#">サービス一覧</a>
             </li>
             <li>
-              <a href="#">中小企業様向けサービス</a>
+              <a href="/smaller_companies/">中小企業様向けサービス</a>
             </li>
             <li>
-              <a href="#">個人事業主様向けサービス</a>
+              <a href="/sole_proprietorship/">個人事業主様向けサービス</a>
             </li>
             <li>
-              <a href="#">よくある質問</a>
+              <a href="/faq/">よくある質問</a>
             </li>
             <li>
-              <a href="#">導入事例</a>
+              <a href="/case_list/">導入事例</a>
             </li>
             <li>
-              <a href="#">クレディセゾンの強み</a>
+              <a href="/strength/">クレディセゾンの強み</a>
             </li>
           </ul>
         </div>
@@ -88,13 +88,13 @@
               <a href="#">セミナー・動画</a>
             </li>
             <li>
-              <a href="#">お役立ち資料</a>
+              <a href="/whitepaper/">お役立ち資料</a>
             </li>
             <li>
               <a href="#">お役立ちコラム</a>
             </li>
             <li>
-              <a href="#">ニュース</a>
+              <a href="/news/">ニュース</a>
             </li>
           </ul>
         </div>
@@ -106,15 +106,15 @@
         <div class="containers">
           <ul class="flex jcC gap30 inherit anc__box">
             <li class="light_btn">
-              <a href="#">ご相談・お問合せ</a>
+              <a href="/contact/">ご相談・お問合せ</a>
               {% include 'component/icons/priamry-arrow-right.njk' %}
             </li>
             <li class="light_btn">
-              <a href="#">サービス資料</a>
+              <a href="/catalog_list/">サービス資料</a>
               {% include 'component/icons/priamry-arrow-right.njk' %}
             </li>
             <li class="light_btn">
-              <a href="#">お役立ち資料</a>
+              <a href="/whitepaper/">お役立ち資料</a>
               {% include 'component/icons/priamry-arrow-right.njk' %}
             </li>
           </ul>
@@ -125,7 +125,7 @@
   <section class="tertiary-section">
     <div class="flex aiC gap50 sec-news__box--item">
       <ul class="flex custom-list gap27">
-        <li><a href="https://corporate.saisoncard.co.jp/company/about_cs/">
+        <li><a href="https://corporate.saisoncard.co.jp/company/about_cs/" target="_blank">
             会社概要
             {% include 'component/icons/external.njk' %}
           </a>
@@ -136,14 +136,14 @@
         </li>
 
         <li>
-          <a href="https://www.saisoncard.co.jp/privacy.html">
+          <a href="https://www.saisoncard.co.jp/privacy.html" target="_blank">
             「個人情報の保護に関する法律」に基づく公表事項
             {% include 'component/icons/external.njk' %}
           </a>
         </li>
 
         <li>
-          <a href="https://www.saisoncard.co.jp/cookie-policy/　">
+          <a href="https://www.saisoncard.co.jp/cookie-policy/" target="_blank">
             cookieポリシー
             {% include 'component/icons/external.njk' %}
           </a>
