--- a/app/_template/partial/header.njk
+++ b/app/_template/partial/header.njk
@@ -11,18 +11,18 @@
             <a href="#" class="font-12px">セミナー・動画</a>
           </li>
           <li class="nav__list__item__button">
-            <a href="#" class="font-12px">お役立ち資料</a>
+            <a href="/whitepaper/" class="font-12px">お役立ち資料</a>
           </li>
         </ul>
         <ul class="flex gap30">
           <li>
-            <a href="#">クレディセゾンの強み</a>
+            <a href="/strength/">クレディセゾンの強み</a>
           </li>
           <li>
-            <a href="#">中小企業様向け</a>
+            <a href="/smaller_companies/">中小企業様向け</a>
           </li>
           <li>
-            <a href="#">個人事業主様向け</a>
+            <a href="/sole_proprietorship/">個人事業主様向け</a>
           </li>
           <li class="nav__list__item__dropdown">
             <a href="#">目的から探す</a>
@@ -39,7 +39,7 @@
       </div>
     </div>
     <div class="nav__list__button pc-only">
-      <a href="#">ご相談・お問い合わせ</a>
+      <a href="/contact/">ご相談・お問い合わせ</a>
     </div>
   </div>
 
