--- a/app/pages/index.njk
+++ b/app/pages/index.njk
@@ -90,7 +90,7 @@
       <div class="containers">
         <ul class="flex jcC gap30 inherit anc__box">
           <li class="anc__box__smes">
-            <a href="#" class="anc__box__container">
+            <a href="/smaller_companies/" class="anc__box__container">
               <div class="anc__box__content">
                 <span>中小企業様向け</span>
                 <span>サービスはこちら</span>
@@ -98,7 +98,7 @@
             </a>
           </li>
           <li class="anc__box__sole">
-            <a href="#" class="anc__box__container">
+            <a href="/sole_proprietorship/" class="anc__box__container">
               <div class="anc__box__content">
                 <span>個人事業主様向け</span>
                 <span>サービスはこちら</span>
@@ -301,7 +301,7 @@
         </div>
       </div>
     </div>
-    <a href="#" class="bondi_blue_outline_btn">
+    <a href="/case_list/" class="bondi_blue_outline_btn">
       <span class="bondi_blue_outline_btn__tittle">
         導入事例一覧を見る
       </span>
@@ -325,7 +325,7 @@
             </h5>
             <h6 class="ttl-senary">資料の紹介文が入ります。資料の紹介文が入ります。資料の紹介文が入ります。資料</h6>
             <div class="quinary-btn">
-              <a href="#" class="blue_gradient_btn small">資料をダウンロード</a>
+              <a href="/whitepaper/detail/" class="blue_gradient_btn small">資料をダウンロード</a>
             </div>
           </div>
 
@@ -339,7 +339,7 @@
             </h5>
             <h6 class="ttl-senary">資料の紹介文が入ります。資料の紹介文が入ります。資料の紹介文が入ります。資料</h6>
             <div class="quinary-btn">
-              <a href="#" class="blue_gradient_btn small">資料をダウンロード</a>
+              <a href="/whitepaper/detail/" class="blue_gradient_btn small">資料をダウンロード</a>
             </div>
           </div>
 
@@ -353,14 +353,14 @@
             </h5>
             <h6 class="ttl-senary">資料の紹介文が入ります。資料の紹介文が入ります。資料の紹介文が入ります。資料</h6>
             <div class="quinary-btn">
-              <a href="#" class="blue_gradient_btn small">資料をダウンロード</a>
+              <a href="/whitepaper/detail/" class="blue_gradient_btn small">資料をダウンロード</a>
             </div>
           </div>
         </div>
       </div>
     </div>
 
-    <a href="#" class="bondi_blue_outline_btn">
+    <a href="/whitepaper/" class="bondi_blue_outline_btn">
       <span class="bondi_blue_outline_btn__tittle">
         お役立ち資料一覧を見る
       </span>
@@ -549,7 +549,7 @@
         </div>
       </div>
     </div>
-    <a href="#" class="bondi_blue_outline_btn">
+    <a href="/news/" class="bondi_blue_outline_btn">
       <span class="bondi_blue_outline_btn__tittle">
         お知らせ一覧を見る
       </span>
@@ -570,7 +570,7 @@
                   <br>
                   サービス資料をダウンロードいただけます。
                 </div>
-                <div><a class="blue_gradient_btn" href="#">サービス資料ダウンロード</a></div>
+                <div><a class="blue_gradient_btn" href="/whitepaper/">サービス資料ダウンロード</a></div>
               </summary>
             </div>
             <div href="#" class="card">
@@ -580,7 +580,7 @@
                   <br>
                   サービス資料をダウンロードいただけます。
                 </div>
-                <div><a class="blue_gradient_btn" href="#">お気軽にお問い合わせください。</a></div>
+                <div><a class="blue_gradient_btn" href="/contact/">お気軽にお問い合わせください。</a></div>
               </summary>
             </div>
           </div>
