--- a/app/_template/partial/top_header.njk
+++ b/app/_template/partial/top_header.njk
@@ -11,18 +11,18 @@
               <a href="#" class="font-12px">セミナー・動画</a>
             </li>
             <li class="nav__list__item__button">
-              <a href="#" class="font-12px">お役立ち資料</a>
+              <a href="/whitepaper/" class="font-12px">お役立ち資料</a>
             </li>
           </ul>
           <ul class="flex gap30">
             <li>
-              <a href="/strength" class="font-15px">クレディセゾンの強み</a>
+              <a href="/strength/" class="font-15px">クレディセゾンの強み</a>
             </li>
             <li>
-              <a href="/smaller_companies" class="font-15px">中小企業様向け</a>
+              <a href="/smaller_companies/" class="font-15px">中小企業様向け</a>
             </li>
             <li>
-              <a href="/sole_proprietorship" class="font-15px">個人事業主様向け</a>
+              <a href="/sole_proprietorship/" class="font-15px">個人事業主様向け</a>
             </li>
             <li class="nav__item__dropdown__search">
               <a href="#" class="font-15px">目的から探す</a>
