--- a/app/assets/scss/4-pages/_catalog_list.scss
+++ b/app/assets/scss/4-pages/_catalog_list.scss
@@ -19,6 +19,7 @@
     .header-title {
       text-align: center;
       letter-spacing: 0px;
+      margin-bottom: 29px;
       color: #061625;
       font-size: 42px;
       font-weight: bold;
@@ -63,7 +64,7 @@
           height: 438px;
           background: #f5f5f5 0% 0% no-repeat padding-box;
           box-shadow: 0px 3px 20px #00000029;
-          transition: all .3s;
+          transition: all 0.3s;
           .item-thumbnail {
             position: relative;
             .thumbnail--up {
