ヘッダーリンク修正

--- a/app/_template/partial/header.njk
+++ b/app/_template/partial/header.njk
@@ -8,7 +8,7 @@
       <nav class="nav__list__item pc-only">
         <ul class="flex jcE gap7">
           <li class="nav__list__item__button">
-            <a href="#" class="font-12px">セミナー・動画</a>
+            <a href="/seminar_list/" class="font-12px">セミナー・動画</a>
           </li>
           <li class="nav__list__item__button">
             <a href="/whitepaper/" class="font-12px">お役立ち資料</a>
