--- a/app/pages/case_list/index.njk
+++ b/app/pages/case_list/index.njk
@@ -206,7 +206,7 @@
       <div class="useful-wp">
         <div class="containers">
           <div class="flex jcC gap60">
-            <div href="#" class="card">
+            <div href="/catalog_list/" class="card">
               <summary class="card__box">
                 <div class="card__box--ttl">サービス資料ダウンロード</div>
                 <div class="card__box--txt">クレディセゾンのソリューションの詳細がわかる
@@ -216,7 +216,7 @@
                 <div><a class="blue_gradient_btn" href="#">サービス資料ダウンロード</a></div>
               </summary>
             </div>
-            <div href="#" class="card">
+            <div href="/contact/" class="card">
               <summary class="card__box">
                 <div class="card__box--ttl">ご相談・お問い合わせ</div>
                 <div class="card__box--txt">各種ソリューションに関するお問合せは
