強みページ修正

--- a/app/pages/strength/index.njk
+++ b/app/pages/strength/index.njk
@@ -134,7 +134,7 @@
         </p>
 
         <div class="section-btn flex gap30">
-          <a href="#" class="bondi_blue_btn">
+          <a href="/sole_proprietorship/" class="bondi_blue_btn">
             <span>個人事業主様向けサービス</span>
 
             <svg xmlns="http://www.w3.org/2000/svg" width="15.095" height="15.095" viewBox="0 0 15.095 15.095">
@@ -143,7 +143,7 @@
             </svg>
           </a>
 
-          <a href="#" class="bondi_blue_btn">
+          <a href="/smaller_companies/" class="bondi_blue_btn">
             <span>中小企業様向けサービス</span>
 
             <svg xmlns="http://www.w3.org/2000/svg" width="15.095" height="15.095" viewBox="0 0 15.095 15.095">
@@ -159,7 +159,7 @@
   <section class="breadcrumb">
     <ul class="flex">
       <li>
-        <a href="#">TOP</a>
+        <a href="/">TOP</a>
       </li>
       <li>
         <a href="#">資金繰りを改善したい</a>
