資料詳細修正

--- a/app/pages/whitepaper/detail/index.njk
+++ b/app/pages/whitepaper/detail/index.njk
@@ -70,6 +70,7 @@
 
             <div class="custom-select">
               <div class="select_wrap">
+
                 <ul class="default_option">
                   <li>
                     <div class="option disabled">
@@ -197,7 +198,7 @@
             </label>
           </div>
 
-          <a href="#" class="term-agreement">
+          <a href="https://www.saisoncard.co.jp/info/legal/" class="term-agreement" target = "_blank">
             <p>「個人情報の取扱い（収集・保有・利用・提供）に関する同意条項」について</p>
           </a>
 
