資料完了ページ修正

--- a/app/pages/whitepaper_thanks/index.njk
+++ b/app/pages/whitepaper_thanks/index.njk
@@ -19,12 +19,12 @@
 
 <main class="whitepaper-thanks-page">
   <section class="section-welcome">
-    <div class="container-1200">
+    <div class="">
       <h1 class="ttl-primary">資料のダウンロードありがとうございます。</h1>
 
       <div class="ttl-tertiary">メールアドレス宛に資料ダウンロード用のURLを送信いたしました。<br>すぐに読むことができますので、ぜひご覧ください！</div>
 
-      <a href="#" class="bondi_blue_btn">
+      <a href="/" class="bondi_blue_btn">
         <span>トップページに戻る</span>
 
         <svg xmlns="http://www.w3.org/2000/svg" width="15.095" height="15.095" viewBox="0 0 15.095 15.095">
