--- a/app/assets/scss/4-pages/_business.scss
+++ b/app/assets/scss/4-pages/_business.scss
@@ -106,8 +106,8 @@
           }
 
           li {
-            flex-basis: calc(33.33% - 60px);
-            max-width: 380px;
+            flex-basis: calc(33.33% - 30px);
+            // max-width: 380px;
             .card {
               transition: all .3s;
               &:hover {
@@ -130,10 +130,13 @@
     .ttl-primary {
       font-size: 32px;
       margin-bottom: 61px;
+      @media #{$sp} {
+        font-size: 20px;
+        margin-bottom: 30px;
+      }
     }
 
     .ttl-quaternary {
-      font-size: 20px;
       font-weight: 600;
       margin: 0;
       text-align: center;
