--- a/app/assets/scss/3-modules/_section.scss
+++ b/app/assets/scss/3-modules/_section.scss
@@ -1008,7 +1008,7 @@
 
   .card {
     border: 0;
-    padding: 31px 30px 34px;
+    padding: 30px;
     background: #ffffff 0% 0% no-repeat padding-box;
     box-shadow: 0px 3px 20px #00000029;
     height: 100%;
@@ -1017,7 +1017,7 @@
     flex-direction: column;
 
     @media #{$sp} {
-      padding: 30px 15px;
+      padding: 15px;
     }
 
     .ttl-quaternary-container {
@@ -1074,6 +1074,7 @@
       border-right: 3px solid #fff;
       border-bottom: 3px solid #fff;
       position: absolute;
+      transition: all .3s;
     }
   }
 
