--- a/app/assets/scss/3-modules/_section.scss
+++ b/app/assets/scss/3-modules/_section.scss
@@ -1049,6 +1049,12 @@
         display: flex;
         align-items: baseline;
         gap: 6px;
+        svg {
+          width: 20px;
+        }
+        span {
+          width: calc(100% - 20px);
+        }
       }
     }
 
