create payment_com page

--- a/app/assets/scss/1-tools/_vars.scss
+++ b/app/assets/scss/1-tools/_vars.scss
@@ -41,6 +41,7 @@ $gradient-bg-2: transparent linear-gradient(90deg, #111111 0%, #444444 100%) 0%
 $blue-color: #0497b5;
 $blue-color-1: #00758c;
 $blue-color-2: #e5f4f8;
+$blue-color-3: #004098;
 
 $green-color: #007477;
 $green-color-1: #53d2b2;
