--- a/app/assets/scss/3-modules/_sidebar.scss
+++ b/app/assets/scss/3-modules/_sidebar.scss
@@ -58,6 +58,7 @@ span.rbt-text-name {
     text-align: center;
     white-space: nowrap;
     font-size: 14px;
+    font-weight: bold;
 
     &:hover,
     &.active {
