--- a/app/pages/payment_com/index.njk
+++ b/app/pages/payment_com/index.njk
@@ -9,13 +9,43 @@
 {% set page = "" %}
 
 {# Breadcrumb #}
-{% set breadcrumb = [{
-  text:"セミナー情報",
-  link:"seminar"
-  },{
-  text:"セミナータイトルが入ります",
-  link:"#"
-  }] %}
+{% set breadcrumb = [
+{
+text:"支払い.com",
+link:"payment"
+}
+] %}
+
+{% set menuSidebar = [
+{
+text: "TOP",
+link: "/"
+},
+{
+text: "支払い.comとは",
+link: "#"
+},
+{
+text: "ご利用までの流れ",
+link: "#"
+},
+{
+text: "選ばれる理由",
+link: "#"
+},
+{
+text: "ご利用者様の声",
+link: "#"
+},
+{
+text: "よくある質問",
+link: "#"
+},
+{
+text: "資料・無料登録",
+link: ""
+}
+] %}
 
 {# Custom tags before </head> #}
 {% block customHead %}{% endblock %}
@@ -25,7 +55,78 @@
 
 {# Main content #}
 {% block content %}
-
+{% include 'partial/sidebar.njk' %}
 <main class="payment_com-page">
+  <section class="section-welcome fadein">
+    <div class="section-welcome-container">
+      <div class="section-welcome-left">
+        <div class="title-notice">
+          <div class="title-content">
+            <span class="yellow-txt">中小企業様</span>のための、
+            <br />
+            新たな<span class="yellow-txt">資金繰り改善策</span>が登場！
+          </div>
+        </div>
+        <h1 class="ttl-primary">支払い.com</h1>
+        <h3 class="ttl-tertiary">全ての支払いを、<span class="special">最長60日後</span>に <br />カードで先延ばしできます。</h3>
+        <div class="btn-action">
+          <a href="#" class="act-more orange_more2">
+            <div class="act-more-tooltip">
+              <h4 class="act-more-tooltip__content">審査なし・書類提出不要！</h4>
+            </div>
+            今すぐ無料で登録
+          </a>
+          <a href="#" class="act-more orange_more2">
+            <div class="act-more-tooltip">
+              <h4 class="act-more-tooltip__content">支払い.comが3分でわかる！</h4>
+            </div>
+            資料ダウンロード
+          </a>
+        </div>
+      </div>
+      <div class="section-welcome-right">
+        <ul class="info-list">
+          <li><span class="special">最短1日後</span>の振り込みに対応！※1</li>
+          <li><span class="special">一律4%</span>のお得な手数料</li>
+          <li>サービス開始1年で導入企業数 <span class="special">20,000社</span>突破！</li>
+        </ul>
+        <div class="info-note">
+          <span>※1 …UPSIDERカード・セゾンカード利用で</span>
+          <span>　前営業日正午までに振り込みを行った場合</span>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="section-primary fadein">
+    <div class="container-1000">
+      <div class="ttl-notice">支払い.comとは</div>
+      <h1 class="ttl-primary">中小企業様向けの「第三の資金繰り改善策」です。</h1>
+      <h4 class="ttl-quaternary">
+        請求書払いをカードで先のばし。振り込みはお任せ！<br />
+        <span class="font-weight-normal">期限の迫った請求書も、支払いまで最長60日余裕をプラス。資金繰りを改善し、借りずに事業を加速できます。</span>
+      </h4>
+      <img src="/assets/img/common/cash-flow.png" alt="cast flow">
+    </div>
+  </section>
+
+  <section class="section-secondary fadein">
+    <div class="container-1200">
+      <h1 class="ttl-primary">このようなお悩みをお持ちの企業様向けのサービスです。</h1>
+      <div class="section-secondary-content">
+        <div class="flex gap30 grid">
+          <div class="grid__card">
+            <div class="grid__card--category">広告業界</div>
+            <h5 class="ttl-quinary">
+              広告出稿費の <br />
+              資金繰りが苦しい
+            </h5>
+            <img src="/assets/img/common/payment-section-card-1.png" alt="cast flow">
+            <h6 class="ttl-senary">資料の紹介文が入ります。資料の紹介文が入ります。資料の紹介文が入ります。資料</h6>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 </main>
 {% endblock %}
