--- a/app/assets/scss/3-modules/_section.scss
+++ b/app/assets/scss/3-modules/_section.scss
@@ -1536,6 +1536,7 @@
     background-color: #000;
     color: #fff;
     font-size: 16px;
+    font-weight: bold;
     margin-bottom: 30px;
   }
 
@@ -2610,6 +2611,7 @@
     top: -20px;
     background-color: $primary-color;
     font-size: 16px;
+    font-weight: 700;
     color: #fff;
     max-width: 480px;
     padding: 7px 0 6px;
@@ -2659,7 +2661,7 @@
       }
 
       span {
-        color: #00aba0;
+        color: #0297B5;
       }
     }
   }
