個人事業主様向けサービス修正

--- a/app/pages/sole_proprietorship/index.njk
+++ b/app/pages/sole_proprietorship/index.njk
@@ -36,7 +36,7 @@
         <h1 class="ttl-primary">個人事業主様向けサービス</h1>
       </div>
       <div>
-        <a href="#" class="blue_gradient_btn">{{ common.button.download }}</a>
+        <a href="/catalog_list/" class="blue_gradient_btn">{{ common.button.download }}</a>
       </div>
     </section>
     <section class="section-primary">
@@ -128,7 +128,7 @@
                 <a href="#" class="black_pill_btn">{{ common.button.solution }}</a>
               </div>
               <div class="inquiry__box--txt">
-                ビジネスでの支払いを<span>セゾンのビジネスカードに一本化</span>することで経費計上の手間を簡略化！
+                ビジネスでの支払いを<span>ビジネスカードに一本化</span>することで経費計上の手間を簡略化！
               </div>
             </summary>
             <div class="card-type7">
@@ -158,7 +158,7 @@
           <div class="notification-panel2">
             <div class="relation">
               <h3 class="single__ttl">
-                <span >個人事業主様・中小企業経営者様におすすめのビジネスカード</span >
+                <span >中小企業経営者様・個人事業主様におすすめのビジネスカード</span >
               </h3>
               <ul class="flex gap30 card-list">
                 <li class="card-type8">
@@ -270,7 +270,7 @@
                       </div>
                       <div class="card__box-title">
                         <h3 class="ttl-terianry">
-                          セゾンコバルト・ビジネス・
+                          セゾンプラチナ・ビジネス・
                           アメリカン・エキスプレス®・カード
                         </h3>
                       </div>
