--- a/app/pages/smaller_companies/index.njk
+++ b/app/pages/smaller_companies/index.njk
@@ -119,7 +119,7 @@
                 <ul class="flex gap30 card-list">
                   {% for item in smaller_companies.secondary.panel2.cards %}
                     <li class="card-type12">
-                      <h3 class="card__box--ttl">{{ item.title }}</h3>
+                      <h3 class="card__box--ttl" style="font-weight:normal !important;">{{ item.title }}</h3>
                       <div class="credit-card">
                         <img src={{ item.image }} class="credit-card-img">
                       </div>
